--- a/css/style.css
+++ b/css/style.css
@@ -8,4 +8,72 @@ body {
     opacity: 1.0;
     margin: 0;
     
+    @media screen and (min-width: 480px) {
+        
+    }
+}
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
   }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+   /* float: right;*/
+   direction: flex;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+  }
+ 
+  .one{
+      /* border: 2px solid yellow; */
+      background-image: url("../images/Pizza.jpeg");
+      /*background-position: center;*/
+      background-size: cover;
+      background-repeat: no-repeat;
+      margin-top: 0px;
+      background-position: 100% 10px;
+      width: 100%;
+  }
+  .two{
+      /* border: 2px red solid; */
+      margin-top: 2px;
+      height: 250px;
+      width: 100%;
+  }
+  .two, .three, .four {
+    padding: 3%;
+  }
+  h1, h3 {
+    color: whitesmoke;
+    font-size: 100px;
+    text-align: center;
+    margin-top: 2%;
+    margin-bottom: 15%;
+  }
+  
+  .name {
+    text-align: center;
+    margin: 2vh 0vh 0vh 2vh;
+  }
+
+#mode {
+  width: 60%;
+  height: 30px;
+}
