--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,13 @@ body {
     margin-bottom: 15%;
   }
   
+  .pizzaImages{
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: black;
+}
+
   .name {
     text-align: center;
     margin: 2vh 0vh 0vh 2vh;
