--- a/css/style.css
+++ b/css/style.css
@@ -88,3 +88,23 @@ body {
   width: 60%;
   height: 30px;
 }
+.socialm {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  margin-top: 0;
+}
+
+.socialm div {
+  margin-right: 10px;
+}
+
+.footer {
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+margin-top: 20px;
+
+}
