--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
 body {
     font-family: 'Roboto', sans-serif;
-   /* background-image: url("../images/backgroundpizza.jpeg");*/
-    background-color: #cccccc; 
+   background-image: url("../images/backgroundpizza3.jpeg");
+    background-color: #331313; 
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 100% 10px;
     opacity: 1.0;
     margin: 0;
-    
+    font: larger;
+    color: white;
     @media screen and (min-width: 480px) {
         
     }
@@ -40,6 +41,32 @@ body {
     background-color: #4CAF50;
     color: white;
   }
+
+.navbar {
+  background-color: black !important;
+  padding: 0px;
+  text-align: center;
+  
+}
+/*
+.brand {
+  font-size: 30px !important;
+  font-weight: bolder;
+  color: goldenrod !important;
+}
+*/
+.motieno-pizza-icon {
+  width: 38px;
+  font-size: 30px;
+  color: chocolate;
+}
+.nav-link {
+  color: white !important;
+}
+
+nav a:hover {
+  color: goldenrod !important;
+} 
  
   .one{
       /* border: 2px solid yellow; */
@@ -67,6 +94,12 @@ body {
     margin-top: 2%;
     margin-bottom: 15%;
   }
+  h3,h4 {
+    color: whitesmoke;
+    font-style: oblique;
+    margin-left: 380px;
+    font-weight: 900;
+  }
   
   .pizzaImages{
     background-position: center;
@@ -74,10 +107,10 @@ body {
     text-align: center;
     color: black;
 }
-.carousel-inner {
-  max-height: 70vh !important;
-}
 
+.carousel-inner {
+    max-height: 70vh !important;
+  }
 
   .name {
     text-align: center;
@@ -112,7 +145,13 @@ margin-top: 20px;
 .customer {
   font-size: larger;
   color: chocolate;
+  margin-left: 10px;
+  margin-right: 0px;
 }
+legend {
+  color: chocolate;
+}
+
 #butt {
   background-color: #F19201;
   color: white;
